// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getListAriaAttributes() should return correct aria attributes for optionMaps: "Some label", isOpen: [ [Object], [Object] ] and hasFilter: false 1`] = `
Object {
  "aria-label": "Some label",
}
`;

exports[`getListAriaAttributes() should return correct aria attributes for optionMaps: "Some label", isOpen: [ [Object], [Object] ] and hasFilter: false 2`] = `
Object {
  "aria-label": "Some label",
}
`;

exports[`getListAriaAttributes() should return correct aria attributes for optionMaps: "Some label", isOpen: [ [Object], [Object] ] and hasFilter: false 3`] = `
Object {
  "aria-activedescendant": "option-1",
  "aria-label": "Some label",
}
`;

exports[`getListAriaAttributes() should return correct aria attributes for optionMaps: "Some label", isOpen: [ [Object], [Object] ] and hasFilter: false 4`] = `
Object {
  "aria-activedescendant": "option-1",
  "aria-label": "Some label",
}
`;

exports[`getListAriaAttributes() should return correct aria attributes for optionMaps: "Some label", isOpen: [ [Object], [Object] ] and hasFilter: true 1`] = `Object {}`;

exports[`getListAriaAttributes() should return correct aria attributes for optionMaps: "Some label", isOpen: [ [Object], [Object] ] and hasFilter: true 2`] = `Object {}`;

exports[`getOptionAriaAttributes() should return correct aria attributes for optionMap: {"disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":false} 1`] = `
Object {
  "aria-disabled": null,
  "aria-hidden": null,
  "aria-label": "Empty value",
  "aria-selected": null,
}
`;

exports[`getOptionAriaAttributes() should return correct aria attributes for optionMap: {"value":"Value 1","disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":false} 1`] = `
Object {
  "aria-disabled": null,
  "aria-hidden": null,
  "aria-label": null,
  "aria-selected": null,
}
`;

exports[`getOptionAriaAttributes() should return correct aria attributes for optionMap: {"value":"Value 1","disabled":false,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":true} 1`] = `
Object {
  "aria-disabled": null,
  "aria-hidden": null,
  "aria-label": null,
  "aria-selected": "true",
}
`;

exports[`getOptionAriaAttributes() should return correct aria attributes for optionMap: {"value":"Value 1","disabled":false,"hidden":false,"initiallyHidden":false,"selected":true,"highlighted":true} 1`] = `
Object {
  "aria-disabled": null,
  "aria-hidden": null,
  "aria-label": null,
  "aria-selected": "true",
}
`;

exports[`getOptionAriaAttributes() should return correct aria attributes for optionMap: {"value":"Value 1","disabled":false,"hidden":false,"initiallyHidden":true,"selected":false,"highlighted":false} 1`] = `
Object {
  "aria-disabled": null,
  "aria-hidden": "true",
  "aria-label": null,
  "aria-selected": null,
}
`;

exports[`getOptionAriaAttributes() should return correct aria attributes for optionMap: {"value":"Value 1","disabled":false,"hidden":true,"initiallyHidden":false,"selected":false,"highlighted":false} 1`] = `
Object {
  "aria-disabled": null,
  "aria-hidden": "true",
  "aria-label": null,
  "aria-selected": null,
}
`;

exports[`getOptionAriaAttributes() should return correct aria attributes for optionMap: {"value":"Value 1","disabled":true,"hidden":false,"initiallyHidden":false,"selected":false,"highlighted":false} 1`] = `
Object {
  "aria-disabled": "true",
  "aria-hidden": null,
  "aria-label": null,
  "aria-selected": null,
}
`;
